--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
         <div class="container-fluid">
             <div class="row">
-              <div class="col-2 order-0 bg-dark" style="padding: 0px;" id="sticky-sidebar">
+              <div class="col-2 order-0 bg-dark d-lg-none d-md-none d-sm-none d-none d-xl-block" style="padding: 0px;" id="sticky-sidebar">
                 <div class="sticky-top">
                     <h4 style="color: aliceblue;">Choose KareXpert Healthcare Platform(s)</h4>
                     <div class="nav flex-column">
