--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>KareXpert Healthcare Platform(s) Pricing Model</title>
+        <title>IQVIA Pricing Model</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         
@@ -82,7 +82,7 @@
             <div class="row">
               <div class="col-2 order-0 bg-dark d-lg-none d-md-none d-sm-none d-none d-xl-block" style="padding: 0px;" id="sticky-sidebar">
                 <div class="sticky-top">
-                    <h4 style="color: aliceblue;">Choose KareXpert Healthcare Platform(s)</h4>
+                    <h4 style="color: aliceblue;">Choose IQVIA Healthcare Platform(s)</h4>
                     <div class="nav flex-column">
                         <a href="#_" class="nav-link active-sidebar">Arcus Live</a>
                         <a href="#_" class="nav-link">Arcus Air</a>
