Dropdown Sidebar Menu Added For Small Screens

--- a/index.html
+++ b/index.html
@@ -72,15 +72,26 @@
         <br>
 
         <!-- Tabs for Different Hospitals -->
-        <div class="container">
-            
-            
+        <div class="container-fluid d-lg-none">
+            <br>
+            <div class="row">
+              <div class="col bg-dark">
+                <label class="" style="color: white;">Choose a IQVIA Digital Platform</label>
+                <select class="form-select mb-2" aria-label="Default select example">
+                  <p></p>
+                  <option selected>Select</option>
+                  <option value="1">Arcus Air</option>
+                  <option value="2">Arcus Live</option>
+                  <option value="3">Health Plug</option>
+                </select>
+              </div>
+            </div>
             <br>
         </div>
 
         <div class="container-fluid">
             <div class="row">
-              <div class="col-2 order-0 bg-dark d-lg-none d-md-none d-sm-none d-none d-xl-block" style="padding: 0px;" id="sticky-sidebar">
+              <div class="col-2 order-0 bg-dark d-none d-lg-block" style="padding: 0px;" id="sticky-sidebar">
                 <div class="sticky-top">
                     <h4 style="color: aliceblue;">Choose IQVIA Healthcare Platform(s)</h4>
                     <div class="nav flex-column">
