Customer Buttons Added

--- a/index.html
+++ b/index.html
@@ -103,27 +103,37 @@
               </div>
               <div class="col order-1">
                 <div class="row">
-                  <h3>Hospital Healthcare Platform</h3>
-                  <ul class="nav nav-pills nav-fill">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Nursing Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Small Hospital</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Medium Hospital</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Large Hospital</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Corporate Hospital</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">EYE Hospital</a>
-                    </li>
-                </ul>
+                  <h3 class="pb-2">Hospital Healthcare Platform</h3>
+                  <div class="row pb-4">
+                    <div class="col">
+                      <button type="button" class="btn btn-outline-primary">Schedule Demo</button>
+                      <button type="button" class="btn btn-outline-primary">30 Days Free Trial</button>
+                      <button type="button" class="btn btn-outline-primary">Get Quotation</button>
+                      <button type="button" class="btn btn-outline-info">Signup as a partner</button>
+                    </div>                    
+                  </div>
+                  <div class="row pb-3">
+                    <ul class="nav nav-pills nav-fill">
+                      <li class="nav-item">
+                          <a class="nav-link active" aria-current="page" href="#">Nursing Home</a>
+                      </li>
+                      <li class="nav-item">
+                          <a class="nav-link" href="#">Small Hospital</a>
+                      </li>
+                      <li class="nav-item">
+                          <a class="nav-link" href="#">Medium Hospital</a>
+                      </li>
+                      <li class="nav-item">
+                          <a class="nav-link" href="#">Large Hospital</a>
+                      </li>
+                      <li class="nav-item">
+                          <a class="nav-link" href="#">Corporate Hospital</a>
+                      </li>
+                      <li class="nav-item">
+                          <a class="nav-link" href="#">EYE Hospital</a>
+                      </li>
+                    </ul>
+                  </div>
                 </div>
                 <div class="table-responsive">
                   <table class="table">
