--- a/index.html
+++ b/index.html
@@ -165,15 +165,15 @@
                         <td class="text-center"><span class="material-icons">check_circle</span></td>
                       </tr>
                       <tr>
-                        <td>Basic EMR</td>
+                        <td><span class="p-2" data-bs-toggle="tooltip" data-bs-placement="right" title="Additional Info">Basic EMR</span></td>
                         <td class="text-center"><span class="material-icons">check_circle</span></td>
                         <td class="text-center"><span class="material-icons">check_circle</span></td>
                         <td class="text-center"><span class="material-icons">check_circle</span></td>
                         <td class="text-center"><span class="material-icons">check_circle</span></td>
                       </tr>
                       <tr>
-                        <td>Inpatient Billing</td>
-                        <td class="text-center"><span class="material-icons-outlined">cancel</span></td>
+                        <td>Inpatient Billing&nbsp;&nbsp;<i class="material-icons-outlined align-bottom" data-bs-toggle="tooltip" data-bs-placement="right" title="Additional Info">info</i></td>
+                        <td class="text-center align-bottom"><span class="material-icons-outlined">cancel</span></td>
                         <td class="text-center"><span class="material-icons-outlined">cancel</span></td>
                         <td class="text-center"><span class="material-icons">check_circle</span></td>
                         <td class="text-center"><span class="material-icons">check_circle</span></td>
