Arcuslive Page Content Update with Hover Effect

--- a/index.html
+++ b/index.html
@@ -165,14 +165,24 @@
                         <td class="text-center"><span class="material-icons-outlined md-blue">check_circle</span></td>
                       </tr>
                       <tr>
-                        <td>Basic EMR</td>
+                        <td>Basic EMR&nbsp;&nbsp;
+                          <i class="material-icons-outlined align-bottom" 
+                          data-bs-toggle="tooltip" 
+                          data-bs-placement="right" 
+                          data-bs-html="true"
+                          title="1. CC / HPI <br>
+                          2. Examination <br>
+                          3. Charting & Assessment <br>
+                          4. Diagnosis"> 
+                          info</i></td>
                         <td class="text-center"><span class="material-icons-outlined md-blue">check_circle</span></td>
                         <td class="text-center"><span class="material-icons-outlined md-blue">check_circle</span></td>
                         <td class="text-center"><span class="material-icons-outlined md-blue">check_circle</span></td>
                         <td class="text-center"><span class="material-icons-outlined md-blue">check_circle</span></td>
                       </tr>
                       <tr>
-                        <td>Inpatient Billing&nbsp;&nbsp;<i class="material-icons-outlined align-bottom" data-bs-toggle="tooltip" data-bs-placement="right" title="Additional Info">info</i></td>
+                        <td>
+                          Inpatient Billing</td>
                         <td class="text-center"><span class="material-icons-outlined md-inactive">cancel</span></td>
                         <td class="text-center"><span class="material-icons-outlined md-inactive">cancel</span></td>
                         <td class="text-center"><span class="material-icons-outlined md-blue">check_circle</span></td>
@@ -186,14 +196,24 @@
                         <td class="text-center"><span class="material-icons-outlined md-blue">check_circle</span></td>
                       </tr>
                       <tr>
-                        <td>Specialty EMR (Opthal & Dental)</td>
+                        <td>
+                          Specialty EMR (Opthal & Dental)&nbsp;&nbsp;
+                          <i class="material-icons-outlined align-bottom" 
+                          data-bs-toggle="tooltip" 
+                          data-bs-placement="right" 
+                          data-bs-html="true"
+                          title="1. Refraction <br>
+                          2. Glass Prescription <br>
+                          3. Ophthal Examination <br>
+                          4. Annotation"> 
+                          info</i></td>
                         <td class="text-center"><span class="material-icons-outlined md-inactive">cancel</span></td>
                         <td class="text-center"><span class="material-icons-outlined md-blue">check_circle</span></td>
                         <td class="text-center"><span class="material-icons-outlined">add_circle_outline</span></td>
                         <td class="text-center"><span class="material-icons-outlined md-inactive">cancel</span></td>
                       </tr>
                       <tr>
-                        <td>Standart Reports (LVL I)</td>
+                        <td>BI Reports (LVL I)</td>
                         <td class="text-center"><span class="material-icons-outlined md-blue">check_circle</span></td>
                         <td class="text-center"><span class="material-icons-outlined md-blue">check_circle</span></td>
                         <td class="text-center"><span class="material-icons-outlined md-blue">check_circle</span></td>
@@ -207,7 +227,22 @@
                         <td class="text-center"><span class="material-icons-outlined md-blue">check_circle</span></td>
                       </tr>
                       <tr>
-                        <td>Advanced EMR</td>
+                        <td>
+                          Advanced EMR&nbsp;&nbsp;
+                          <i class="material-icons-outlined align-bottom" 
+                          data-bs-toggle="tooltip" 
+                          data-bs-placement="right" 
+                          data-bs-html="true"
+                          title="1. Basic EMR + <br>
+                          2. ICD9 and ICD10 <br>
+                          3. Timeline <br>
+                          4. Vaccines <br>
+                          5. Lab <br>
+                          6. Radiology <br>
+                          7. Pathology <br>
+                          8. Procedures <br>
+                          9. IPD EMR">  
+                          info</i></td>
                         <td class="text-center"><span class="material-icons-outlined">add_circle_outline</span></td>
                         <td class="text-center"><span class="material-icons-outlined">add_circle_outline</span></td>
                         <td class="text-center"><span class="material-icons-outlined md-blue">check_circle</span></td>
@@ -256,7 +291,18 @@
                         <td class="text-center"><span class="material-icons-outlined md-blue">check_circle</span></td>
                       </tr>
                       <tr>
-                        <td>Ancillary Departments (MRD,Diet,LR)</td>
+                        <td>
+                          Ancillary Departments&nbsp;&nbsp;
+                          <i class="material-icons-outlined align-bottom" 
+                          data-bs-toggle="tooltip" 
+                          data-bs-placement="right" 
+                          data-bs-html="true"
+                          title="1. MRD <br>
+                          2. Diet <br>
+                          3. Labour Room <br>
+                          4. Emergency <br>
+                          5. CSSD"> 
+                          info</i></td>
                         <td class="text-center"><span class="material-icons-outlined md-inactive">cancel</span></td>
                         <td class="text-center"><span class="material-icons-outlined md-inactive">cancel</span></td>
                         <td class="text-center"><span class="material-icons-outlined">add_circle_outline</span></td>
@@ -285,6 +331,81 @@
                       </tr>
                       <tr>
                         <td>Interfacing</td>
+                        <td class="text-center"><span class="material-icons-outlined">add_circle_outline</span></td>
+                        <td class="text-center"><span class="material-icons-outlined">add_circle_outline</span></td>
+                        <td class="text-center"><span class="material-icons-outlined">add_circle_outline</span></td>
+                        <td class="text-center"><span class="material-icons-outlined">add_circle_outline</span></td>
+                      </tr>
+                      <tr>
+                        <td>Data Migration</td>
+                        <td class="text-center"><span class="material-icons-outlined">add_circle_outline</span></td>
+                        <td class="text-center"><span class="material-icons-outlined">add_circle_outline</span></td>
+                        <td class="text-center"><span class="material-icons-outlined">add_circle_outline</span></td>
+                        <td class="text-center"><span class="material-icons-outlined">add_circle_outline</span></td>
+                      </tr>
+                      <tr>
+                        <td>E-Claims Management</td>
+                        <td class="text-center"><span class="material-icons-outlined">add_circle_outline</span></td>
+                        <td class="text-center"><span class="material-icons-outlined">add_circle_outline</span></td>
+                        <td class="text-center"><span class="material-icons-outlined">add_circle_outline</span></td>
+                        <td class="text-center"><span class="material-icons-outlined">add_circle_outline</span></td>
+                      </tr>
+                      <tr>
+                        <td>SMS Interation</td>
+                        <td class="text-center"><span class="material-icons-outlined">add_circle_outline</span></td>
+                        <td class="text-center"><span class="material-icons-outlined">add_circle_outline</span></td>
+                        <td class="text-center"><span class="material-icons-outlined">add_circle_outline</span></td>
+                        <td class="text-center"><span class="material-icons-outlined">add_circle_outline</span></td>
+                      </tr>
+                      <tr>
+                        <td>Additional Cloud Storage</td>
+                        <td class="text-center"><span class="material-icons-outlined">add_circle_outline</span></td>
+                        <td class="text-center"><span class="material-icons-outlined">add_circle_outline</span></td>
+                        <td class="text-center"><span class="material-icons-outlined">add_circle_outline</span></td>
+                        <td class="text-center"><span class="material-icons-outlined">add_circle_outline</span></td>
+                      </tr>
+                      <tr>
+                        <td>
+                          Standard Support&nbsp;&nbsp;
+                          <i class="material-icons-outlined align-bottom" 
+                          data-bs-toggle="tooltip" 
+                          data-bs-placement="right" 
+                          data-bs-html="true"
+                          title="1. Support Portal, Email <br>
+                          2. Response within 4 hours <br>"> 
+                          info</i></td>
+                        <td class="text-center"><span class="material-icons-outlined">add_circle_outline</span></td>
+                        <td class="text-center"><span class="material-icons-outlined">add_circle_outline</span></td>
+                        <td class="text-center"><span class="material-icons-outlined">add_circle_outline</span></td>
+                        <td class="text-center"><span class="material-icons-outlined">add_circle_outline</span></td>
+                      </tr>
+                      <tr>
+                        <td>
+                          Gold Support&nbsp;&nbsp;
+                          <i class="material-icons-outlined align-bottom" 
+                          data-bs-toggle="tooltip" 
+                          data-bs-placement="right" 
+                          data-bs-html="true"
+                          title="1. Standard + Live chat, phone<br>
+                          2. Support on holidays and post business hours<br>
+                          3. Response within 2 hours<br>"> 
+                          info</i></td>
+                        <td class="text-center"><span class="material-icons-outlined">add_circle_outline</span></td>
+                        <td class="text-center"><span class="material-icons-outlined">add_circle_outline</span></td>
+                        <td class="text-center"><span class="material-icons-outlined">add_circle_outline</span></td>
+                        <td class="text-center"><span class="material-icons-outlined">add_circle_outline</span></td>
+                      </tr>
+                      <tr>
+                        <td>
+                          Platinum Support&nbsp;&nbsp;
+                          <i class="material-icons-outlined align-bottom" 
+                          data-bs-toggle="tooltip" 
+                          data-bs-placement="right" 
+                          data-bs-html="true"
+                          title="1. Support on holidays and post business hours<br>
+                          2. Dedicated support team for business continuity<br>
+                          3. Response within 1 hour<br>"> 
+                          info</i></td>
                         <td class="text-center"><span class="material-icons-outlined">add_circle_outline</span></td>
                         <td class="text-center"><span class="material-icons-outlined">add_circle_outline</span></td>
                         <td class="text-center"><span class="material-icons-outlined">add_circle_outline</span></td>
