--- a/index.html
+++ b/index.html
@@ -50,8 +50,11 @@
         <div class="container">
             <div class="row d-flex align-items-md-center">
                 <div class="col-lg-6 pt-4">
-                    <h1>SaaS Based <br>Pricing Model</h1>
-                    <p>Choose your Country</p>
+                    <h1>Our SaaS Solutions & Pricing</h1>
+                    <p>&nbsp;&nbsp;End to End solution for "All Care Settings"</p><br>
+                    <p>- Comprehensive suite of Healthcare Provider Solutions</p>
+                    <p>- On Premises & Cloud-Hosted</p>
+                    <p>- Ready-to-Use</p>
                     <div class="row col-md-7">
                         <select class="form-select flex-shrink-1" aria-label="Default select example">
                             <option selected value="0">India</option>
