--- a/arcusair.html
+++ b/arcusair.html
@@ -18,7 +18,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
 
         <!-- Custom Css -->
-        <link rel="stylesheet" href="style.scss">
+        <link rel="stylesheet" href="style.css">
 
     </head>
     <body>
