--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="row d-flex align-items-md-center">
                 <div class="col-lg-6 pt-4">
                     <h1 style="color: #14a9e2;">Our SaaS Solutions & Pricing</h1>
-                    <p>&nbsp;&nbsp;End to End solution for "All Care Settings"</p><br>
+                    <p class="px-2">End to End solution for "All Care Settings"</p><br>
                     <p>- Comprehensive suite of Healthcare Provider Solutions</p>
                     <p>- On Premises & Cloud-Hosted</p>
                     <p>- Ready-to-Use</p>
