--- a/arcusair.html
+++ b/arcusair.html
@@ -54,16 +54,16 @@
         <!-- Saas Based Pricing Model -->
         <div class="container">
             <div class="row d-flex align-items-md-center">
-                <div class="col-lg-6 pt-4">
+                <div class="col-lg-6 pt-4 map-left">
                     <h1 style="color: #14a9e2;">Our SaaS Solutions & Pricing</h1>
-                    <p class="px-2">End to End solution for "All Care Settings"</p><br>
+                    <p>End to End solution for "All Care Settings"</p><br>
                     <p>- Comprehensive suite of Healthcare Provider Solutions</p>
                     <p>- On Premises & Cloud-Hosted</p>
                     <p>- Ready-to-Use</p>
-                    <div class="row col-md-7">
-                        <select class="form-select flex-shrink-1" aria-label="Default select example">
-                            <option selected value="0">Choose Your Country</option>
-                            <option value="1">India</option>
+                    <div class="row col-md-7" style="padding-left: 12px;">
+                      <label>Choose Your Country</label>
+                        <select class="form-select form-select-sm flex-shrink-1" aria-label="Default select example">
+                            <option selected value="1">India</option>
                             <option value="2">USA</option>
                             <option value="3">Canada</option>
                             <option value="4">United Kingdom</option>
@@ -386,6 +386,13 @@
                         <td class="text-center">Add-on</td>
                         <td class="text-center">Add-on</td>
                         <td class="text-center">Add-on</td>
+                      </tr>
+                      <tr>
+                        <td>Pricing</td>
+                        <td class="text-center">₹</td>
+                        <td class="text-center">₹</td>
+                        <td class="text-center">₹</td>
+                        <td class="text-center">₹</td>
                       </tr>
                     </tbody>
                   </table>
