--- a/arcusair.html
+++ b/arcusair.html
@@ -61,7 +61,7 @@
                     <p>- On Premises & Cloud-Hosted</p>
                     <p>- Ready-to-Use</p>
                     <div class="row col-md-7" style="padding-left: 12px;">
-                      <label>Choose Your Country</label>
+                      <label style="padding-left: 4px;">Choose Your Country</label>
                         <select class="form-select form-select-sm flex-shrink-1" aria-label="Default select example">
                             <option selected value="1">India</option>
                             <option value="2">USA</option>
@@ -87,12 +87,11 @@
             <div class="row">
               <div class="col">
                 <label style="color: white;">Choose IQVIA Hospital EMR Solutions</label>
-                <select class="form-select mb-2" aria-label="Default select example">
-                  <p></p>
+                <select class="form-select mb-2" aria-label="Default select example" onchange="location = this.value;">
                   <option selected>Select</option>
-                  <option value="1">Arcus Air</option>
-                  <option value="2">Arcus Live</option>
-                  <option value="3">Health Plug</option>
+                  <option value="index.html">Arcuslive</option>
+                  <option value="arcusair.html">Arcusair</option>
+                  <option value="healthplug.html">Health Plug</option>
                 </select>
               </div>
             </div>
@@ -120,7 +119,7 @@
                       <button type="button" class="btn btn-outline-primary">Book a Demo</button>
                       <button type="button" class="btn btn-outline-primary">Be a Partner</button>
                       <button type="button" class="btn btn-outline-primary">Request Quotation</button>
-                      <button type="button" class="btn btn-outline-primary video-btn" data-bs-toggle="modal" data-bs-target="#videoModal" data-bs-src="https://www.youtube.com/embed/giXco2jaZ_4">
+                      <button type="button" class="btn btn-outline-primary video-btn" data-bs-toggle="modal" data-bs-target="#videoModal" data-bs-src="https://www.youtube.com/embed/9hTzuRLa4pw">
                         Watch Product Video
                     </button>
                       <button type="button" class="btn btn-outline-primary">FAQ</button>
@@ -387,7 +386,7 @@
                         <td class="text-center">Add-on</td>
                         <td class="text-center">Add-on</td>
                       </tr>
-                      <tr>
+                      <tr style="font-weight: bold;">
                         <td>Pricing</td>
                         <td class="text-center">₹</td>
                         <td class="text-center">₹</td>
