--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
                     <p>- Comprehensive suite of Healthcare Provider Solutions</p>
                     <p>- On Premises & Cloud-Hosted</p>
                     <p>- Ready-to-Use</p>
-                    <div class="row col-md-7" style="padding-left: 12px;">
-                      <label>Choose Your Country</label>
+                    <div class="row col-md-7"  style="padding-left: 12px;">
+                      <label style="padding-left: 4px;">Choose Your Country</label>
                         <select class="form-select form-select-sm flex-shrink-1" aria-label="Default select example">
                             <option selected value="1">India</option>
                             <option value="2">USA</option>
@@ -90,9 +90,9 @@
                 <select class="form-select mb-2" aria-label="Default select example">
                   <p></p>
                   <option selected>Select</option>
-                  <option value="1">Arcus Air</option>
-                  <option value="2">Arcus Live</option>
-                  <option value="3">Health Plug</option>
+                  <option value="index.html">Arculive</option>
+                  <option value="arcusair.html">Arcusair</option>
+                  <option value="healthplug.html">Health Plug</option>
                 </select>
               </div>
             </div>
@@ -120,7 +120,7 @@
                       <button type="button" class="btn btn-outline-primary">Book a Demo</button>
                       <button type="button" class="btn btn-outline-primary">Be a Partner</button>
                       <button type="button" class="btn btn-outline-primary">Request Quotation</button>
-                      <button type="button" class="btn btn-outline-primary video-btn" data-bs-toggle="modal" data-bs-target="#videoModal" data-bs-src="https://www.youtube.com/embed/giXco2jaZ_4">
+                      <button type="button" class="btn btn-outline-primary video-btn" data-bs-toggle="modal" data-bs-target="#videoModal" data-bs-src="https://www.youtube.com/embed/9hTzuRLa4pw">
                         Watch Product Video
                     </button>
                       <button type="button" class="btn btn-outline-primary">FAQ</button>
@@ -420,7 +420,7 @@
                         <td class="text-center">Add-on</td>
                         <td class="text-center">Add-on</td>
                       </tr>
-                      <tr>
+                      <tr style="font-weight: bold;">
                         <td>Pricing</td>
                         <td class="text-center">₹</td>
                         <td class="text-center">₹</td>
