--- a/index.html
+++ b/index.html
@@ -28,19 +28,38 @@
                 <button class="navbar-toggler order-2" type="button" data-bs-toggle="collapse" data-bs-target="#collapsingNavbar1">
                     <span class="navbar-toggler-icon"></span>
                 </button> 
-                <!-- <div class="navbar-collapse collapse" id="collapsingNavbar1">
-                    <ul class="navbar-nav w-100 justify-content-center">
-                        <li class="nav-item active">
-                            <a href="#" class="nav-link">Link</a>
+                <div class="navbar-collapse collapse" id="collapsingNavbar1">
+                    <ul class="navbar-nav w-100 justify-content-right">
+                        <!-- <li class="nav-item active">
+                            <a href="#" class="nav-link" style="color: black;">Case Stuides</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">Codeply</a>
+                            <a href="#" class="nav-link" style="color: black;">Client List</a>
+                        </li> -->
+                        <li class="nav-item dropdown">
+                          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color: black;">
+                            Case Studies
+                          </a>
+                          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="#">Case Study 1</a></li>
+                            <li><a class="dropdown-item" href="#">Case Study 2</a></li>
+                            <li><a class="dropdown-item" href="#">Case Study 3</a></li>
+                            <li><a class="dropdown-item" href="#">Case Study 4</a></li>
+                          </ul>
                         </li>
-                        <li class="nav-item">
-                            <a href="#" class="nav-link">Link</a>
+                        <li class="nav-item dropdown">
+                          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color: black;">
+                            Client List
+                          </a>
+                          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="#">Client 1</a></li>
+                            <li><a class="dropdown-item" href="#">Client 2</a></li>
+                            <li><a class="dropdown-item" href="#">Client 3</a></li>
+                            <li><a class="dropdown-item" href="#">Client 4</a></li>
+                          </ul>
                         </li>
                     </ul>
-                </div> -->
+                </div>
                 <ul class="navbar-nav order-1">
                     <li class="nav-item">
                         <div>
@@ -55,7 +74,7 @@
         <div class="container">
             <div class="row d-flex align-items-md-center">
                 <div class="col-lg-6 pt-4 map-left">
-                    <h1 style="color: #14a9e2;">Our SaaS Solutions & Pricing</h1>
+                    <h1 style="color: #14a9e2;">Our Solutions & Pricing</h1>
                     <p>End to End solution for "All Care Settings"</p><br>
                     <p>- Comprehensive suite of Healthcare Provider Solutions</p>
                     <p>- On Premises & Cloud-Hosted</p>
