--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button> 
                 <div class="navbar-collapse collapse" id="collapsingNavbar1">
-                    <ul class="navbar-nav w-100 justify-content-right">
+                    <ul class="navbar-nav w-100 ms-auto justify-content-end">
                         <!-- <li class="nav-item active">
                             <a href="#" class="nav-link" style="color: black;">Case Stuides</a>
                         </li>
@@ -49,7 +49,7 @@
                         </li>
                         <li class="nav-item dropdown">
                           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color: black;">
-                            Client List
+                            Clients
                           </a>
                           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="#">Client 1</a></li>
