navbar right align

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <ul class="navbar-nav order-1">
                     <li class="nav-item">
                         <div>
-                            <button type="button" class="btn btn-sm btn-outline-dark navbar-btn">Signup</button>
+                            <button type="button" class="btn btn-sm btn-outline-dark navbar-btn ms-2">Signup</button>
                         </div>
                     </li>
                 </ul>
