navbar right align to all pagees

--- a/arcusair.html
+++ b/arcusair.html
@@ -22,34 +22,53 @@
 
     </head>
     <body>
-        <nav class="navbar navbar-dark bg-light navbar-expand-lg justify-content-center">
-            <div class="container">
-                <a href="#" class="navbar-brand" style="color: black;">IQVIA</a>
-                <button class="navbar-toggler order-2" type="button" data-bs-toggle="collapse" data-bs-target="#collapsingNavbar1">
-                    <span class="navbar-toggler-icon"></span>
-                </button> 
-                <!-- <div class="navbar-collapse collapse" id="collapsingNavbar1">
-                    <ul class="navbar-nav w-100 justify-content-center">
-                        <li class="nav-item active">
-                            <a href="#" class="nav-link">Link</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="#" class="nav-link">Codeply</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="#" class="nav-link">Link</a>
-                        </li>
-                    </ul>
-                </div> -->
-                <ul class="navbar-nav order-1">
+      <nav class="navbar navbar-dark bg-light navbar-expand-lg justify-content-center">
+        <div class="container">
+            <a href="#" class="navbar-brand" style="color: black;">IQVIA</a>
+            <button class="navbar-toggler order-2" type="button" data-bs-toggle="collapse" data-bs-target="#collapsingNavbar1">
+                <span class="navbar-toggler-icon"></span>
+            </button> 
+            <div class="navbar-collapse collapse" id="collapsingNavbar1">
+                <ul class="navbar-nav w-100 ms-auto justify-content-end">
+                    <!-- <li class="nav-item active">
+                        <a href="#" class="nav-link" style="color: black;">Case Stuides</a>
+                    </li>
                     <li class="nav-item">
-                        <div>
-                            <button type="button" class="btn btn-sm btn-outline-dark navbar-btn">Signup</button>
-                        </div>
+                        <a href="#" class="nav-link" style="color: black;">Client List</a>
+                    </li> -->
+                    <li class="nav-item dropdown">
+                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color: black;">
+                        Case Studies
+                      </a>
+                      <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" href="#">Case Study 1</a></li>
+                        <li><a class="dropdown-item" href="#">Case Study 2</a></li>
+                        <li><a class="dropdown-item" href="#">Case Study 3</a></li>
+                        <li><a class="dropdown-item" href="#">Case Study 4</a></li>
+                      </ul>
+                    </li>
+                    <li class="nav-item dropdown">
+                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color: black;">
+                        Clients
+                      </a>
+                      <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" href="#">Client 1</a></li>
+                        <li><a class="dropdown-item" href="#">Client 2</a></li>
+                        <li><a class="dropdown-item" href="#">Client 3</a></li>
+                        <li><a class="dropdown-item" href="#">Client 4</a></li>
+                      </ul>
                     </li>
                 </ul>
             </div>
-        </nav>
+            <ul class="navbar-nav order-1">
+                <li class="nav-item">
+                    <div>
+                        <button type="button" class="btn btn-sm btn-outline-dark navbar-btn ms-2">Signup</button>
+                    </div>
+                </li>
+            </ul>
+        </div>
+      </nav>
 
         <!-- Saas Based Pricing Model -->
         <div class="container">
